# duplicate_example

./: Cargo.toml
best-crate/: Cargo.toml
best-crate/src/: lib.rs
duplicate-bug/: Cargo.toml  NOTICE
duplicate-bug/examples/: schema.rs
duplicate-bug/src/: contract.rs  msg.rs
